# travel_booking_application

./: .dockerignore  .env.example  .gitignore  Dockerfile  Readme.md  db.sqlite3  deploy.sh  docker-compose.yml  docker-entrypoint.sh  mysql-init.sql  nginx.conf  populate_data.py  pyproject.toml
booking_app/: admin.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
booking_app/migrations/: 0001_initial.py
booking_app/templates/booking_app/: base.html  booking_detail.html  booking_form.html  booking_list.html  home.html  login.html  profile.html  register.html  travel_list.html
core/: settings.py  urls.py
static/css/: style.css
static/js/: script.js
