[project]
name = "travel-booking-application"
version = "0.1.0"
description = ""
authors = [
    {name = "ankur",email = "ankurjaiswalofficial@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "mysqlclient (>=2.2.7,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
